hphp/hack/test/ifc/check/null_leak.php.exp
=== IFC analysis results for null_leak.php
File "null_leak.php", line 22, characters 5-14:
Data with policy `X` appears in context `Y`. (Typing[4379])
  File "null_leak.php", line 5, characters 14-19:
  This may be the data source with policy `X`
  File "null_leak.php", line 8, characters 14-19:
  This may be the data sink with policy `Y`
  File "null_leak.php", line 14, characters 7-15:
  Another program point contributing to the illegal flow
  File "null_leak.php", line 15, characters 5-14:
  Another program point contributing to the illegal flow
  File "null_leak.php", line 18, characters 7-8:
  Another program point contributing to the illegal flow
